# Matrix-API

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cuda-indexing.h  main.cu
matrix/: CMakeLists.txt
matrix/include/: Matrix.h  Multiplication.h
matrix/src/: Matrix.cu  Multiplication.cu
matrix/test/: main.cu
web-api/: CMakeLists.txt  main.py  matrix.py
web-api/matrix/: CMakeLists.txt  matrix.cu
